<resources>
    <string name="app_name">Credential Manager</string>
    <string name="show_accounts">Accounts</string>
    <string name="add_account">Add new Account</string>
    <string name="change_account">Change existing Account</string>
    <string name="authentication">Authentication</string>
    <string name="label_fingerprint">Fingerprint</string>
    <string name="label_about">About</string>
    <string name="label_settings">Settings</string>
    <string name="label_setMasterPassword">Set Master Password</string>

    <string name="bluetooth">Connection</string>
    <string name="accounts">Accounts</string>
    <string name="available_accounts">Available Accounts</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="about_title">Bachelor\'s Project</string>
    <string name="author">Author</string>
    <string name="about_author">Camilla Reis</string>
    <string name="advisor">Advisor</string>
    <string name="about_advisor">Dipl.-Ing. Dominik Ziegler</string>
    <string name="about_institute">Institute of Applied Information Processing and Communications</string>
    <string name="about_project">Android Credential Manager</string>
    <string name="about_description">The motivation of this project is to provide availability and
        safety of user credentials by using a mobile password manager. It provides a secure transfer
        environment through Bluetooth without relying on cloud services. </string>

    <!-- Bluetooth -->
    <string name="bluetoothNotSupported">Bluetooth Not Supported</string>
    <string name="bluetoothNotEnabled">Bluetooth is Not Enabled</string>
    <string name="bluetoothAdvertisingNotSupported">BLE Advertising Not Supported</string>
    <string name="hint_bluetoothOFF">Bluetooth is turned off.</string>
    <string name="hint_bluetoothON">Bluetooth is turned on.</string>

    <!-- Connection -->
    <string name="label_connectionStatus">Connection Status</string>
    <string name="status_devicesConnected">Devices Connected:</string>
    <string name="status_errorWhenConnecting">An error occurred when connecting to a device. Error Code</string>
    <string name="status_noLeAdv">Advertising is not available. Please pair with a device to be
        discoverable.
    </string>

    <!-- Advertising -->
    <string name="status_click_to_advertise">"Not yet Advertising. Select credential to advertise."</string>
    <string name="status_advertising">Now Advertising, please keep screen on</string>
    <string name="status_notAdvertising">Not Advertising</string>
    <string name="status_advDataTooLarge">Not Advertising. Advertisement is larger than 31 bytes.</string>
    <string name="status_advFeatureUnsupported">Not Advertising. Advertising not supported.</string>
    <string name="status_advInternalError">Not Advertising. Internal error occurred.</string>
    <string name="status_advTooManyAdvertisers">Not Advertising. No advertising instance is available.</string>


    <!-- Buttons -->
    <string name="button_save">SAVE</string>
    <string name="button_delete">DELETE</string>
    <string name="button_bluetooth">ON/OFF</string>
    <string name="button_discoverable">enable discoverable</string>
    <string name="button_access">access</string>


    <string name="title_activity_web_logins">Web Logins</string>
    <string name="hint_username">Insert a username</string>
    <string name="hint_password">Insert a password</string>
    <string name="hint_account">Insert a website</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Do you want to delete this account?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="enterMasterPassword">For authentication enter your master password</string>
    <string name="fingerprint">or scan your fingerprint</string>

    <string name="setMasterPassword">Set a master password</string>

    <string name="instructions">Place your fingertip on the Home button to verify your identity
        </string>

    <!-- Fingerprint -->
    <string name="fpactivity_hardwaredetected">Your device does not support fingerprint
        authentication.</string>
    <string name="fpactivity_permission">Fingerprint authentication permission is not enabled.</string>
    <string name="fpactivity_enrolledfingerprints">No fingerprint configured. Please register at
        least one fingerprint.</string>
    <string name="fpactivity_keyguardsecure">Lock screen security is not enabled.</string>
    <string name="fphandler">Lock screen security is not enabled.</string>


</resources>
