<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iaikbacc.camilla.androidcredentialstore.iaik.iaikbacc.camilla.androidcredentialstore.activities.BluetoothActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bluetooth_button"
        android:text="@string/button_bluetooth"
        android:layout_below="@+id/notification_bluetooth"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_discoverableOnOff"
        android:onClick="btnEnableDisableDiscoverable"
        android:text="@string/button_discoverable"
        android:layout_below="@+id/notification_bluetooth"
        android:layout_toEndOf="@+id/button_findUnpairedDevices" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_findUnpairedDevices"
        android:text="Discover"
        android:onClick="buttonDiscover"
        android:layout_alignBaseline="@+id/button_discoverableOnOff"
        android:layout_alignBottom="@+id/button_discoverableOnOff"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notification_bluetooth"
        android:text="@string/hint_bluetoothOFF"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/lvNewDevices"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bluetooth_button"
        android:layout_alignParentStart="true">

    </ListView>


</RelativeLayout>
