<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/blue3"
        android:id="@+id/LoginsSymbol"
        android:src="@drawable/ic_account_circle_black_48px"
        android:onClick="fingerprintActivity"
        android:clickable="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/accounts"
        android:id="@+id/LoginsTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="fingerprintActivity"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/LoginsSymbol"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_toEndOf="@+id/LoginsSymbol"
        android:padding="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/blue3"
        android:src="@drawable/ic_bluetooth_black_48px"
        android:id="@+id/BluetoothSymbol"
        android:onClick="showBluetoothActivity"
        android:clickable="true"
        android:layout_below="@id/LoginsTextView"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@+id/LoginsSymbol"
        android:layout_toStartOf="@+id/LoginsTextView" />

    <TextView
        android:text="@string/bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BluetoothTextView"
        android:onClick="showBluetoothActivity"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:layout_alignBottom="@id/BluetoothSymbol"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:layout_toEndOf="@+id/BluetoothSymbol"
        android:padding="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/blue3"
        android:src="@drawable/ic_settings_black_48px"
        android:id="@+id/SettingsSymbol"
        android:onClick="showSettingsActivity"
        android:clickable="true"
        android:layout_below="@+id/BluetoothSymbol"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@id/BluetoothSymbol"
        android:layout_toStartOf="@id/BluetoothTextView"/>

    <TextView
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SettingsTextView"
        android:onClick="showSettingsActivity"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/SettingsSymbol"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:padding="10dp"
        android:layout_toEndOf="@id/SettingsSymbol"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/blue3"
        android:src="@drawable/ic_info_outline_black_48px"
        android:id="@+id/AboutSymbol"
        android:onClick="showAboutActivity"
        android:clickable="true"
        android:layout_below="@+id/SettingsSymbol"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@id/SettingsSymbol"
        android:layout_toStartOf="@id/SettingsTextView"/>

    <TextView
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AboutTextView"
        android:onClick="showAboutActivity"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:layout_alignBottom="@id/AboutSymbol"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:padding="10dp"
        android:layout_toEndOf="@id/AboutSymbol"/>


</RelativeLayout>
